--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
     ],
     "require": {
         "php": "^7.2.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "Apothan\\OpenTourLibBundle\\": "src/"
+        }
     }
     
 }
