--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,15 +13,17 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
+    Apothan\OpenTourLibBundle\:
         resource: '../src/*'
         exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Controller\:
+    Apothan\OpenTourLibBundle\Controller\:
         resource: '../src/Controller'
-        tags: ['controller.service_arguments']
+        tags: ['controller.service_arguments', 'container.service_subscriber']
+        calls:
+            - setContainer: ['@service_container']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
