--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "php": "^7.2.5"
+        "php": "^7.2.5",
+        "sensio/framework-extra-bundle": "^5.6"
     },
     "autoload": {
         "psr-4": {
