--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "symfony/framework-bundle": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/yaml": "5.2.*",
-        "sensio/framework-extra-bundle": "^6.1"
+        "sensio/framework-extra-bundle": "^6.1",
+        "doctrine/annotations": "^1.12"
     },
     "autoload": {
         "psr-4": {
