--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,6 +26,8 @@ services:
             - '../src/Tests/'
             - '../src/Migrations'
 
+    ApothanOpenTourLib: '@Apothan\OpenTourLibBundle\'
+
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     Apothan\OpenTourLibBundle\Controller\:
