--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "twig/intl-extra": "^3.3",
         "doctrine/orm": "^2.9",
         "symfony/dotenv": "5.3.*",
+        "symfony/form": "5.3.*",
         "doctrine/doctrine-bundle": "^2.4",
         "symfony/monolog-bundle": "^3.7",
         "symfony/webpack-encore-bundle": "^1.12",
