--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "symfony/translation": "5.3.*",
         "symfony/notifier": "5.3.*",
         "symfony/validator": "5.3.*",
-        "symfony/security-bundle": "5.3.*"
+        "symfony/security-bundle": "5.3.*",
+        "symfony/apache-pack": "^1.0"
     },
     "autoload": {
         "psr-4": {
